test_outputs/connlist/exposure_test_with_anp_4_entire_cluster_example_explain_exposure_output.txt

##########################################
# Specific connections and their reasons #
##########################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => hello-world/workload-a[Deployment]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies // rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			[NP] hello-world/deny-all-app-a // Ingress (hello-world/workload-a[Deployment] is selected by the policy, but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule - no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between hello-world/workload-a[Deployment] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies // rules:
		Egress (Denied)
			[NP] hello-world/deny-all-app-a // Egress (hello-world/workload-a[Deployment] is selected by the policy, but 0.0.0.0-255.255.255.255 is not selected by any Egress rule - no rules defined)
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between hello-world/workload-a[Deployment] => hello-world/workload-b[Deployment]:

Allowed connections:
	Allowed TCP:[80] due to the following policies // rules:
		Egress (Allowed)
			[ANP] exposure-allow-with-entire-cluster-example // Egress rule allow-tcp80-egress-to-entire-cluster (Allow)
		Ingress (Allowed)
			[ANP] exposure-allow-with-entire-cluster-example // Ingress rule allow-tcp80-ingress-from-entire-cluster (Allow)

Denied connections:
	Denied TCP:[1-79,81-65535], UDP, SCTP due to the following policies // rules:
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between hello-world/workload-b[Deployment] => hello-world/workload-a[Deployment]:

Allowed connections:
	Allowed TCP:[80] due to the following policies // rules:
		Egress (Allowed)
			[ANP] exposure-allow-with-entire-cluster-example // Egress rule allow-tcp80-egress-to-entire-cluster (Allow)
		Ingress (Allowed)
			[ANP] exposure-allow-with-entire-cluster-example // Ingress rule allow-tcp80-ingress-from-entire-cluster (Allow)

Denied connections:
	Denied TCP:[1-79,81-65535], UDP, SCTP due to the following policies // rules:
		Egress (Allowed) due to the system default (Allow all)


#########################################################
# All Connections due to the system default (Allow all) #
#########################################################
0.0.0.0-255.255.255.255 => hello-world/workload-b[Deployment]
hello-world/workload-b[Deployment] => 0.0.0.0-255.255.255.255

Exposure Analysis Result:
Egress Exposure:
hello-world/workload-a[Deployment] 	=> 	entire-cluster : TCP 80
hello-world/workload-b[Deployment] 	=> 	0.0.0.0-255.255.255.255 : All Connections
hello-world/workload-b[Deployment] 	=> 	entire-cluster : All Connections

Ingress Exposure:
hello-world/workload-a[Deployment] 	<= 	entire-cluster : TCP 80
hello-world/workload-b[Deployment] 	<= 	0.0.0.0-255.255.255.255 : All Connections
hello-world/workload-b[Deployment] 	<= 	entire-cluster : All Connections
